[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyboiler"
version = "0.0.1"
authors = [
  { name="HushmKun", email="HushmKun@outlook.com" },
  { name="Link-", email="bsm.dgdy@gmail.com" },
]
description = "Creates a configurable python project template in a given directory."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
        "Intended Audience :: Developers",
        "Development Status :: 2 - Pre-Alpha",
        "Environment :: Console",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Build Tools"
      ]

[project.urls]
"Homepage" = "https://github.com/HushmKun/pyboiler"
"Bug Tracker" = "https://github.com/HushmKun/pyboiler/issues"

[project.scripts]
pyboiler = "pyboiler.__main__:main"
